cmake_minimum_required(VERSION 2.8.3)
project(topic_demux)

## Find catkin macros and libraries
find_package(catkin REQUIRED COMPONENTS rospy std_msgs geometry_msgs)

## Declare ROS messages and services
# add_message_files(FILES Message1.msg Message2.msg)
# add_service_files(FILES Service1.srv Service2.srv)

## Generate added messages and services
# generate_messages(DEPENDENCIES std_msgs)

## Declare catkin package
catkin_package()

## Specify additional locations of header files
#include_directories(${catkin_INCLUDE_DIRS})

## Declare a cpp executable
# add_executable(topic_demux src/topic_demux.cpp)

## Specify libraries to link a library or executable target against
# target_link_libraries(topic_mux ${catkin_LIBRARIES})
